docs: mise à jour du README avec formules mathématiques et détails d'installation